basic function update

--- a/src/to_do_list.html
+++ b/src/to_do_list.html
@@ -16,16 +16,14 @@
         <ul id="todo">
             <li class="will_do">
                 <label class="checkbox">
-                    <input class="input" type="checkbox">
+                    <input type="checkbox">
                     <span class="on_check"></span>
                 </label>
-                <input type="text" placeholder="할 일..." maxlength="16" class="will_do_text">
+                <input type="text" placeholder="할 일..." maxlength="16">
+                <button type="button">X</button>
             </li>
         </ul>
     </main>
-    <footer>
-
-    </footer>
     <script src="index.js"></script>
 </body>
 </html>
