--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,6 @@
             </li>
         </ul>
     </main>
-    <script src="index.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
